[package]
name = "pallet-contracts"
version = "3.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
description = "FRAME pallet for WASM contracts"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
log = { version = "0.4", default-features = false }
parity-wasm = { version = "0.42", default-features = false }
pwasm-utils = { version = "0.17", default-features = false }
serde = { version = "1", optional = true, features = ["derive"] }
wasmi-validation = { version = "0.4", default-features = false }

# Only used in benchmarking to generate random contract code
rand = { version = "0.8", optional = true, default-features = false }
rand_pcg = { version = "0.3", optional = true }

# Substrate Dependencies
frame-benchmarking = {default-features = false, optional = true, version = '3.1.0', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-05'}
frame-support = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-05'}
frame-system = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-05'}
pallet-contracts-primitives = { default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-05'}

pallet-contracts-proc-macro = { version = "3.0.0", git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-05' }
sp-core = { version = "3.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-05' }
sp-io = { version = "3.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-05' }
sp-runtime = { version = "3.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-05' }
sp-sandbox = { version = "0.9.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-05' }
sp-std = { version = "3.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-05' }

pallet-sudo = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-05'}

[dev-dependencies]
assert_matches = "1"
hex-literal = "0.3"
paste = "1"
pretty_assertions = "0.7"
wat = "1"

# Substrate Dependencies
pallet-balances = { version = "3.0.0", git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-05' }
pallet-timestamp = { version = "3.0.0",git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-05' }
pallet-randomness-collective-flip = { version = "3.0.0", git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-05' }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-io/std",
	"sp-std/std",
	"sp-sandbox/std",
	"frame-support/std",
	"frame-system/std",
	"parity-wasm/std",
	"pwasm-utils/std",
	"wasmi-validation/std",
	"pallet-contracts-primitives/std",
	"pallet-contracts-proc-macro/full",
	"log/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"rand",
	"rand_pcg",
]
try-runtime = ["frame-support/try-runtime"]
